cmake_minimum_required(VERSION 3.0.0)
project(cldlib VERSION 0.1.0)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

SET (CMAKE_SOURCE_DIR, src)
SET (PROJECT_SOURCE_DIR "${PROJECT_SOURCE_DIR}/src")
MESSAGE ("CMAKE_SOURCE_DIR: ${CMAKE_SOURCE_DIR}")
MESSAGE ("PROJECT_SOURCE_DIR: ${PROJECT_SOURCE_DIR}")

add_executable(cldlib ${PROJECT_SOURCE_DIR}/main.cpp)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
